fix: change the sql error handling to the pgx one
